[gd_scene load_steps=24 format=3 uid="uid://x4xvyjhuuchw"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_aywbf"]
[ext_resource type="PackedScene" uid="uid://8ae3us1t6ex0" path="res://scenes/player_components/gravity_component.tscn" id="3_pdeae"]
[ext_resource type="Texture2D" uid="uid://c7n4vxmhmwbcq" path="res://addons/kenney_assets/colored-transparent_packed.png" id="4_pwqt4"]
[ext_resource type="PackedScene" uid="uid://dvxfyko6go10j" path="res://scenes/player_components/input_component.tscn" id="4_rqgq7"]
[ext_resource type="PackedScene" uid="uid://c5go11ej7di68" path="res://scenes/player_components/movement_component.tscn" id="5_8s3m7"]
[ext_resource type="PackedScene" uid="uid://dy66inpcaslud" path="res://scenes/player_components/animation_component.tscn" id="6_6271w"]
[ext_resource type="PackedScene" uid="uid://bhgvwnre44ugb" path="res://scenes/player_components/advanced_jump_component.tscn" id="7_fd5fn"]
[ext_resource type="Texture2D" uid="uid://bdfna5bobinqt" path="res://addons/2d_lights_and_shadows_neutral_point_light.webp" id="8_y83mj"]
[ext_resource type="PackedScene" uid="uid://bs0deb2kfmfwm" path="res://scenes/player_components/particles_component.tscn" id="9_66ldv"]
[ext_resource type="PackedScene" uid="uid://5b7egs30teqy" path="res://scenes/player_components/audio_component.tscn" id="11_l0ii6"]
[ext_resource type="Script" path="res://scripts/screen_shake.gd" id="11_lp4fb"]
[ext_resource type="AudioStream" uid="uid://tp43qh16jfop" path="res://addons/footstep.wav" id="12_176ln"]
[ext_resource type="AudioStream" uid="uid://b2x67py6kt0ut" path="res://addons/jump.wav" id="12_ldwt1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_68jin"]
atlas = ExtResource("4_pwqt4")
region = Rect2(304, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jopr"]
atlas = ExtResource("4_pwqt4")
region = Rect2(288, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8h2c"]
atlas = ExtResource("4_pwqt4")
region = Rect2(336, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_righs"]
atlas = ExtResource("4_pwqt4")
region = Rect2(320, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_exg3b"]
atlas = ExtResource("4_pwqt4")
region = Rect2(288, 128, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ave6c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_68jin")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jopr")
}],
"loop": true,
"name": &"idle",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8h2c")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_righs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exg3b")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_esj2h"]
radius = 6.0
height = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hf7pf"]
radius = 9.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_n6vir"]
particle_flag_disable_z = true
emission_shape_offset = Vector3(2, 14, 0)
direction = Vector3(-1, -1, 0)
spread = 60.0
initial_velocity_min = 10.0
initial_velocity_max = 20.0
angular_velocity_min = 50.0
angular_velocity_max = 50.0
gravity = Vector3(0, 0, 0)
scale_max = 2.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_2e2mr"]
lifetime_randomness = 1.0
particle_flag_disable_z = true
emission_shape_offset = Vector3(8, 8, 0)
emission_shape = 6
emission_ring_axis = Vector3(4, 4, 0)
emission_ring_height = 4.0
emission_ring_radius = 4.0
emission_ring_inner_radius = 4.0
angle_min = -71.4
angle_max = 71.4
spread = 180.0
initial_velocity_min = 70.0
initial_velocity_max = 80.0
gravity = Vector3(0, 0, 0)
linear_accel_min = -25.0
linear_accel_max = -25.0
color = Color(50, 50, 1, 1)

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("gravity_component", "input_component", "movement_component", "animation_component", "jump_component", "particles_component", "audio_component", "light_timer", "footstep_sound", "point_light", "death_particles")]
physics_interpolation_mode = 1
z_index = 1
collision_layer = 2
floor_snap_length = 2.0
script = ExtResource("1_aywbf")
gravity_component = NodePath("Components/GravityComponent")
input_component = NodePath("Components/InputComponent")
movement_component = NodePath("Components/MovementComponent")
animation_component = NodePath("Components/AnimationComponent")
jump_component = NodePath("Components/AdvancedJumpComponent")
particles_component = NodePath("Components/ParticlesComponent")
audio_component = NodePath("Components/AudioComponent")
light_timer = NodePath("LightTimer")
footstep_sound = NodePath("SoundFX/FootstepSound")
point_light = NodePath("PointLight2D")
death_particles = NodePath("Particles/DeathParticles")
metadata/_edit_group_ = true

[node name="LightTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(8, 10)
texture = ExtResource("8_y83mj")
texture_scale = 2.5

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
self_modulate = Color(50, 50, 1, 1)
sprite_frames = SubResource("SpriteFrames_ave6c")
animation = &"walk"
frame = 1
frame_progress = 0.67096
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, 9)
shape = SubResource("CapsuleShape2D_esj2h")

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2(8, 8)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_hf7pf")
debug_color = Color(0.7, 0, 0.185268, 0.42)

[node name="ScreenShake" type="Node2D" parent="."]
script = ExtResource("11_lp4fb")

[node name="Components" type="Node" parent="."]

[node name="GravityComponent" parent="Components" instance=ExtResource("3_pdeae")]

[node name="InputComponent" parent="Components" instance=ExtResource("4_rqgq7")]

[node name="MovementComponent" parent="Components" instance=ExtResource("5_8s3m7")]

[node name="AnimationComponent" parent="Components" node_paths=PackedStringArray("sprite") instance=ExtResource("6_6271w")]
sprite = NodePath("../../AnimatedSprite2D")

[node name="AdvancedJumpComponent" parent="Components" instance=ExtResource("7_fd5fn")]
jump_velocity = -290.0
coyote_time = 0.1

[node name="ParticlesComponent" parent="Components" node_paths=PackedStringArray("sprite", "particles") instance=ExtResource("9_66ldv")]
sprite = NodePath("../../AnimatedSprite2D")
particles = NodePath("../../Particles/RunParticles")

[node name="AudioComponent" parent="Components" node_paths=PackedStringArray("footstep_sound", "jump_sound", "animated_sprite") instance=ExtResource("11_l0ii6")]
footstep_sound = NodePath("../../SoundFX/FootstepSound")
jump_sound = NodePath("../../SoundFX/JumpSound")
animated_sprite = NodePath("../../AnimatedSprite2D")

[node name="Particles" type="Node2D" parent="."]

[node name="RunParticles" type="GPUParticles2D" parent="Particles"]
emitting = false
process_material = SubResource("ParticleProcessMaterial_n6vir")
lifetime = 0.3

[node name="DeathParticles" type="GPUParticles2D" parent="Particles"]
emitting = false
amount = 24
process_material = SubResource("ParticleProcessMaterial_2e2mr")
one_shot = true
explosiveness = 1.0

[node name="SoundFX" type="Node2D" parent="."]

[node name="FootstepSound" type="AudioStreamPlayer2D" parent="SoundFX"]
stream = ExtResource("12_176ln")
bus = &"SoundFX"

[node name="JumpSound" type="AudioStreamPlayer2D" parent="SoundFX"]
stream = ExtResource("12_ldwt1")
bus = &"SoundFX"

[connection signal="animation_changed" from="AnimatedSprite2D" to="Components/AudioComponent" method="_on_animated_sprite_2d_animation_changed"]
[connection signal="animation_looped" from="AnimatedSprite2D" to="Components/AudioComponent" method="_on_animated_sprite_2d_animation_changed"]
[connection signal="body_shape_entered" from="Hitbox" to="." method="_on_hitbox_body_shape_entered"]
